Start to build JS for locate city and temperature
Use navigator.geolocation
and SheCodes Api to get weather information

--- a/src/style.css
+++ b/src/style.css
@@ -33,9 +33,9 @@ body{
     font-weight: 400;
 }
 .temp{
-    text-align: center;
-    padding-top: 10px;
     font-size: 18px;
+    position: relative;
+    top: 4px;
 }
 .temp-unit{
     cursor: pointer;
