--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,10 @@
 body{
+    height: 100vh;
     font-family: 'Roboto', sans-serif;
-    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(207, 224, 231) 90%);
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(207, 214, 231) 90%);
 }
 .container{
-    height: 70vh;
+    height: 90%;
     background-color: white;
     border-radius: 20px;
     box-shadow: 1px 1px 32px 12px rgba(179, 179, 179, 0.1);
@@ -12,52 +13,74 @@ body{
 /* **************** */
 /* leftside box */
 #weather-box-left{
+    height: 90%;
     display: flex;
     flex-direction: column;
 }
+/* search bar */
+#search-form i {
+    cursor: pointer;
+}
+#search-bar {
+    width: 75%;
+    background-color: rgba(255, 255, 255, 0.328);
+    font-size: 12px;
+    padding: 8px 18px;
+    box-shadow: 1px 1px 10px 5px rgba(211, 211, 211, 0.213);
+    margin-top: 16%;
+}
+#search-icon {
+    color: #504982;
+}
+#search-Btn{
+    border: none;
+    background-color: white;
+    color: white;
+}
+/* city info */
 #current-city{
+    font-weight: bold;
     font-size: 30px;
-    padding: 8.5% 0px 0px 5%;
+    padding: 5% 0px 0px 5%;
+    color: #504982;
 }
 .fa-solid{
     color: rgb(147, 147, 147);
 }
 #temp-list{
     padding-left: 8%;
+    padding-top: 10%;
+    color: #504982;
 }
 #main-temp{
-    font-size: 60px;
-    font-weight: 400;
+    font-size: 65px;
 }
 #celsius{
     font-weight: 400;
 }
+#fahrenheit{
+    font-weight: 300;
+}
 .temp{
     font-size: 18px;
     position: relative;
-    top: 4px;
-}
-.temp-unit{
-    cursor: pointer;
-    text-decoration: none;
-    transition: all 300ms ease-in-out;
-}
-.temp-unit:hover{
-    text-decoration: underline;
+    top: 18px;
+    left: 8px;
 }
 #weather-box-left-img{
-    font-size: 120px;
+    width: 60%;
     padding-left: 8%;
+    padding-top: 8%;
+    image-resolution: 300dpi;
 }
-#weather-box-left h1{
-    font-size: 70px;
-}
-.temp{
-    padding-top: 12px;
-    padding-left: 8px;
-}
-#weather-box-left-date{
+#weather-box-left-date,
+#weather-current-date{
     padding-left: 8%;
+    font-size: 16px;
+}
+.fa-sharp{
+    
+    color: #504982;
 }
 .time-zone{
     color: rgb(147, 147, 147);
@@ -66,12 +89,20 @@ body{
     opacity: 0.1;
 }
 #weather-box-left-detail{
-    padding-left: 5%;
+    padding-left: 8%;
+    font-size: 16px;
+}
+#weather-description{
+    display: inline-block;
+}
+#weather-description::first-letter{
+    text-transform: capitalize;
 }
 /* **************** */
 /* rightside box */
 #weather-box-right{
-    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(232, 243, 248) 90%);
+    height: 100%;
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(232, 237, 248) 90%);
     padding-top: 3%;
 }
 .right-top-small-title{
@@ -81,24 +112,18 @@ body{
     font-size: 20px;
     font-weight: 500;
     font-style: italic;
+    color: #504982;
 }
-.light-content{
+.cnBtn{
     color: rgb(147, 147, 147);
     font-weight: 300;
 }
-.dark-content{
+.enBtn.cnB,
+.inputLocation{
     font-weight: 400;
+    color: #504982;
 }
-#search-form i {
-    cursor: pointer;
-}
-#search-bar {
-    width: 75%;
-    background-color: rgba(255, 255, 255, 0.328);
-    font-size: 12px;
-    padding: 8px 18px;
-    box-shadow: 1px 1px 10px 1px rgba(211, 211, 211, 0.1);
-}
+
 /* 7 days forecast */
 #weather-forecast{
     margin: 0px auto;
@@ -120,10 +145,14 @@ body{
 .forecast-day i{
     font-size: 30px;
 }
+.fw-semibold{
+    color: #504982;
+}
 /* weather detail */
 #weather-detail{
     font-size: 18px;
     font-weight: 400;
+    color: #504982;
 }
 .weather-detail-list li{
     width: 29.3%;
@@ -135,20 +164,25 @@ body{
 .forecast-detail{
     color: rgb(147, 147, 147);
     padding-top: 8%;
+    
 }
 .detail{
     font-size: 45px;
     font-weight: 300;
+    color: #504982;
 }
-.sunrise-set-time{
+.sunrise-set-time,
+.max-min-temp{
     font-size: 22px;
     font-weight: 300;
+    color: #504982;
 }
 #button-sign{
     font-family: Courier;
     font-size: 12px;
     text-align: center;
     margin-top: 10px;
+    margin-bottom: 5%;
 }
 #button-sign a{
     text-decoration: none;
@@ -160,3 +194,4 @@ body{
     color: black;
     text-decoration: underline;
 }
+
