--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,15 @@ body{
     font-family: 'Roboto', sans-serif;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(207, 214, 231) 90%);
 }
+
 .container{
     height: 90%;
-    background-color: white;
+    background: white;
     border-radius: 20px;
     box-shadow: 1px 1px 32px 12px rgba(179, 179, 179, 0.1);
     margin-top: 20%;
 }
+
 /* **************** */
 /* leftside box */
 #weather-box-left{
@@ -18,8 +20,18 @@ body{
     flex-direction: column;
 }
 /* search bar */
-#search-form i {
+#search-form{
     cursor: pointer;
+    position: relative;
+    height: 50px;
+
+}
+#data-clear-input{
+    position: absolute;
+    top:50px;
+    right:90px;
+    cursor: pointer; 
+    display: none;
 }
 #search-bar {
     width: 75%;
@@ -29,15 +41,19 @@ body{
     box-shadow: 1px 1px 10px 5px rgba(211, 211, 211, 0.213);
     margin-top: 16%;
 }
+#searchBtn-icon{
+    border: 0;
+    outline: none;
+    background-color: transparent;
+}
 #search-icon {
     color: #48484A;
 }
-#search-Btn{
-    border: none;
-    background-color: white;
-    color: white;
-}
+
 /* city info */
+#current-location{
+    padding-top: 22%;
+}
 #current-city{
     font-weight: bold;
     font-size: 30px;
@@ -59,7 +75,6 @@ body{
 #temp-list{
     padding-left: 8%;
     padding-top: 10%;
-    
 }
 .temp-unit{
     color: rgb(147, 147, 147);
@@ -73,12 +88,10 @@ body{
     font-weight: 500;
     color: #EC6E4C;
     cursor: default;
-   
 }
 #temp-list .active:hover{
     text-decoration: none;
 }
-
 #main-temp{
     font-size: 65px;
     color: #48484A;
@@ -89,26 +102,62 @@ body{
     padding-top: 8%;
     image-resolution: 300dpi;
 }
-#weather-box-left-date,
-#weather-current-date{
-    padding-left: 8%;
-    font-size: 16px;
+.leftSideIcon{
     color: #48484A;
-}
-.fa-solid{
-    
+    font-size: 22px;
     color: #EC6E4C;
 }
-#left-side-line{
-    opacity: 0.1;
-}
-#weather-box-left-detail{
+#weather-box-left-date{
     padding-left: 8%;
     font-size: 16px;
     color: #48484A;
+}
+
+#left-side-line{
+    margin-top: 10%;
+    opacity: 0.1;
+}
+.weather-detail-img {
+    width: 94%;
+    border-radius: 10px;
+    height: 150px;
+    margin-top: 3%;
+    position: relative;
+    
+}
+#insertCityName{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    text-shadow: 2px 4px 4px rgba(39, 39, 39, 0.6);
+}
+#displayImgGalery,
+#imgForecastLink {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+#displayImgGalery {
+    object-position: 0% 35%;
+    object-fit: cover
+}
+#weather-box-left-detail{
+    padding: 15px 0px 0px 8%;
+    font-size: 16px;
+    color: #48484A;
+}
+#weather-box-left-detail li{
+    padding-top: 15px;
 }
 #weather-description{
     display: inline-block;
+    padding-top: 10px;
+    font-size: 30px;
 }
 #weather-description::first-letter{
     text-transform: capitalize;
@@ -137,9 +186,8 @@ body{
     color: #48484A;
     margin-bottom: 0em;
 }
-.cnBtn{
-    color: rgb(147, 147, 147);
-    font-weight: 300;
+#getCurrentLocation{
+    cursor: pointer;
 }
 .enBtn,
 .inputLocation{
@@ -150,12 +198,12 @@ body{
 #weather-forecast{
     margin: 0px auto;
     width: 93%;
-    height: 200px;
+    height: 180px;
     text-align: center;
     margin-top: 16px;
 }
 .forecast-day{
-    background-color: white;
+    background: white;
     border-radius: 10px;
     width: 13.3%;
 }
@@ -176,32 +224,21 @@ body{
     font-weight: 400;
     color: #48484A;
     font-style: italic;
-    
+    max-width: 80%;
+    max-height: 20px;
 }
+
 .weather-detail-list{
-    margin-bottom: 20px;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
 }
-.weather-detail-img{
-    height: 220px;
-}
-.weather-detail-img{
-    width: 94%;
-    margin: 0px auto;
-    border-radius: 10px;
-    
-}
-#displayImgGalery,
-#imgForecastLink{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-}
-#displayImgGalery{
-    object-position:0% 35%;
-    object-fit: cover
+#secondList{
+    margin-bottom: 3%;
 }
 .weather-detail-list li{
     width: 29.3%;
+    height: 95%;
     font-size: 13px;
 }
 .weather-detail-list li p{
@@ -221,7 +258,7 @@ body{
     top: 5px;
 }
 .detail{
-    font-size: 45px;
+    font-size: 42px;
     font-weight: 300;
     color:#48484A;
 }
@@ -254,10 +291,53 @@ body{
     text-decoration: none;
     color: rgb(147, 147, 147);
     transition: all 300ms ease-in-out;
-    
 }
 #button-sign a:hover{
     color: black;
     text-decoration: underline;
 }
 
+body.night {
+    background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
+    color: #e1e1e1
+}
+
+body.night.switch-wrapper.sun {
+    background: url(../src/img/sun-white.png) no-repeat center;
+    background-size: 100%
+}
+
+body.night .switch-wrapper .moon {
+    background: url(../src/img/moon-white.png) no-repeat center;
+    background-size: 100%
+}
+body.night .container,
+body.night #weather-box-right {
+    /* background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%); */
+    box-shadow: 1px 1px 32px 12px rgba(15, 12, 49, 0.079);
+    background-image: linear-gradient(40deg, rgb(32, 38, 57), rgb(63, 76, 119));
+}
+
+body.night .container #weather-box-left #search-form input,
+body.night .container #weather-box-left #current-location #current-city,
+body.night #search-icon,
+body.night #main-temp,
+body.night #weather-box-left-detail,
+body.night #weather-box-left-date,
+body.night #brand-logo-name,
+body.night #getCurrentLocation,
+body.night .cnBtn,
+body.night #weather-forecast .forecast-day p,
+body.night #weather-detail,
+body.night .container #weather-box-right .weather-detail-list .forecast-day p,
+body.night .container #weather-box-right .weather-detail-list .forecast-day p span,
+body.night #left-side-line {
+    color: rgb(252, 252, 252);
+}
+body.night .container #weather-box-left #search-form input,
+body.night #weather-forecast .forecast-day,
+body.night .container #weather-box-right .weather-detail-list .forecast-day {
+    background: rgba(92, 103, 160, 0.132);
+    box-shadow: 1px 1px 10px 5px rgba(18, 24, 45, 0.074);
+
+}
