--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,6 @@ body{
     font-family: 'Roboto', sans-serif;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(207, 214, 231) 90%);
 }
-
 .container{
     height: 90%;
     background: white;
@@ -11,7 +10,6 @@ body{
     box-shadow: 1px 1px 32px 12px rgba(179, 179, 179, 0.1);
     margin-top: 20%;
 }
-
 /* **************** */
 /* leftside box */
 #weather-box-left{
@@ -189,7 +187,64 @@ body{
 #getCurrentLocation{
     cursor: pointer;
 }
-.enBtn,
+/* switch Btn */
+.switch-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.switch-wrapper .moon,
+.switch-wrapper .sun {
+    width: 22px;
+    height: 22px;
+}
+.switch-wrapper .sun {
+    background: url(../src/img/sun.png) no-repeat center;
+    background-size: 100%
+}
+.switch-wrapper .moon {
+    background: url(../src/img/moon.png) no-repeat center;
+    background-size: 100%
+}
+.switch-wrapper .toggle-wrapper {
+    margin: 5px
+}
+/* hide check box */
+.switch-wrapper .toggle-wrapper #switch {
+    height: 0;
+    width: 0;
+    visibility: hidden;
+    position: absolute
+}
+.switch-wrapper .toggle-wrapper #switch:checked+label {
+    background: #EC6E4C;
+}
+.switch-wrapper .toggle-wrapper #switch:checked+label:after {
+    left: calc(100% - 3px);
+    transform: translateX(-100%)
+}
+.switch-wrapper .toggle-wrapper label {
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 45px;
+    height: 25px;
+    background: #cad0e1;
+    display: block;
+    border-radius: 100px;
+    position: relative
+}
+.switch-wrapper .toggle-wrapper label:after {
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 19px;
+    height: 19px;
+    background: #fff;
+    border-radius: 100%
+}
 .inputLocation{
     font-weight: 400;
     color: #EC6E4C;
@@ -248,6 +303,10 @@ body{
     color: rgb(147, 147, 147);
     padding-top: 8%;
 }
+.humidityIcon{
+    font-size: 30px;
+    font-weight: 400;
+}
 .sunriseIcon{
     position: relative;
     top: 3px;
@@ -296,28 +355,25 @@ body{
     color: black;
     text-decoration: underline;
 }
-
+/* **************** */
+/* dark mode */
 body.night {
     background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
     color: #e1e1e1
 }
-
-body.night.switch-wrapper.sun {
+body.night .switch-wrapper .sun {
     background: url(../src/img/sun-white.png) no-repeat center;
     background-size: 100%
 }
-
 body.night .switch-wrapper .moon {
     background: url(../src/img/moon-white.png) no-repeat center;
     background-size: 100%
 }
 body.night .container,
 body.night #weather-box-right {
-    /* background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%); */
     box-shadow: 1px 1px 32px 12px rgba(15, 12, 49, 0.079);
     background-image: linear-gradient(40deg, rgb(32, 38, 57), rgb(63, 76, 119));
 }
-
 body.night .container #weather-box-left #search-form input,
 body.night .container #weather-box-left #current-location #current-city,
 body.night #search-icon,
