--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,9 @@
 body{
-    
     font-family: 'Roboto', sans-serif;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(207, 214, 231) 90%);
     background-repeat: no-repeat;
 }
 .container{
-/* .container{ */
     height: 90%;
     background: white;
     border-radius: 20px;
@@ -18,15 +16,12 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
-    /* border: 1px solid red; */
     padding-left: 2%;
-    
 }
 /* search bar */
 #search-form{
     cursor: pointer;
     position: relative;
-    
 }
 #topTitle{
     display: none;
@@ -54,15 +49,14 @@ body{
 #search-icon {
     color: #48484A;
 }
-
 /* city info */
 #current-location{
     padding-top: 10%;
 }
 #current-city{
     font-weight: bold;
-    font-size: 2vw;
-    padding: 5% 0px 0px 5%;
+    font-size: 1.6vw;
+    padding: 5% 0px 0px 9%;
     color: #48484A;
 }
 #current-country{
@@ -74,13 +68,12 @@ body{
 .temp {
     font-size: 1vw;
     position: relative;
-    top:16px;
-    left: 5px;
+    top:22px;
+    left: 2px;
 }
 #temp-list{
     padding-left: 18%;
     padding-top: 10%;
-    
 }
 .temp-unit{
     color: rgb(147, 147, 147);
@@ -99,7 +92,7 @@ body{
     text-decoration: none;
 }
 #main-temp{
-    font-size: 3.2vw;
+    font-size: 4vw;
     color: #48484A;
     margin-left: 10%;
 }
@@ -124,10 +117,9 @@ body{
     opacity: 0.1;
 }
 .weather-detail-img {
-
-    border-radius: 10px;
-    margin-top: 18%;
+    margin-top: 14%;
     position: relative;
+    margin-right: 10px;
 }
 #insertCityName{
     position: absolute;
@@ -139,18 +131,16 @@ body{
     font-weight: bold;
     text-shadow: 2px 4px 4px rgba(39, 39, 39, 0.6);
 }
-
 #imgForecastLink {
     width: 100%;
     height: 100%;
-    border-radius: 10px;
 }
-
 #displayImgGalery {
     width: 100%;
     height: 15vh;
     object-position: 0% 35%;
-    object-fit: cover
+    object-fit: cover;
+    border-radius: 10px;
 }
 #weather-box-left-detail{
     margin-left: 10%;
@@ -164,7 +154,6 @@ body{
 #weather-description{
     display: inline-block;
     padding-top: 10px;
-    font-size: 30px;
 }
 #weather-description::first-letter{
     text-transform: capitalize;
@@ -180,7 +169,7 @@ body{
     width: 80%;
     padding:0px;
     width: 90%;
-    margin-top: 2.8%;
+    margin-top: 2%;
 }
 .right-top-small-title{
     font-size: 12px;
@@ -204,7 +193,7 @@ body{
 }
 .switch-wrapper .moon,
 .switch-wrapper .sun {
-    width: 1.5vw;
+    width: 1vw;
     height: 4vh;
 }
 .switch-wrapper .sun {
@@ -342,7 +331,7 @@ body{
     top: 5px;
 }
 .detail{
-    font-size: 42px;
+    font-size: 2vw;
     font-weight: 300;
     color:#48484A;
 }
@@ -353,7 +342,7 @@ body{
 .sunrise-set-time,
 #max-temp,
 #min-temp{
-    font-size: 30px;
+    font-size: 1.5vw;
     font-weight: 300;
     color:#48484A;
 }
@@ -427,17 +416,23 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
 @media only screen and (max-width: 1400px) {
     /* left side container */
     #search-form{
-        margin-top: 3%;
+        margin-top: 10%;
     }
     #data-clear-input {
-        top: 36px;
-        right: 65px;
+        top: 43px;
+        right: 75px;
+    }
+    #current-location {
+        padding-top: 22%;
+    }
+    #main-temp{
+        font-size: 6vw;
     }
     .temp {
         font-size: 1vw;
         position: relative;
-        top: 9px;
-        left: 5px;
+        top: 19px;
+        left: 2px;
     }
     #weather-box-left-detail {
         padding: 5px 0px 0px 8%;
@@ -448,6 +443,14 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
         margin-top: 4%;
         width: 85%;
     }
+    .detail {
+        font-size: 3vw;
+    }
+        .sunrise-set-time,
+        #max-temp,
+        #min-temp {
+            font-size: 3vw;
+        }
 }
 
 @media only screen and (max-width: 1200px) {
@@ -455,10 +458,21 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
         margin-top: 10%;
     }
     #search-form {
-        padding-top: 10%;
+        padding-top: 2%;
+    }
+    #data-clear-input {
+        top: 40px;
+        right: 65px;
     }
     #current-location {
-        padding-top: 35%;
+        padding-top: 26%;
+       
+    }
+    #current-city{
+        font-size: 2.5vw;
+    }
+    #current-country{
+        font-size: 1.2vw;
     }
     #weather-box-left-img {
         width: 70%;
@@ -490,6 +504,12 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
         position: relative;
         top: 3px;
     }
+    .weather-detail-img {
+        margin-top: 14%;
+    }
+    #displayImgGalery {
+        height: 12vh;
+    }
     .forecast-day {
         width: 12%;
     }
@@ -513,23 +533,13 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
         text-align: center;
         padding-left: 0%;
     }
-    /* #topTitle{
-        display: block;
-        font-size: 2.8vw;
-        font-weight: 300;
-        font-style: italic;
-        color: white;
-        margin-right: 15%;
-    } */
     #search-form {
         cursor: pointer;
         padding-top: 20px;
-        /* display: flex;
-        justify-content: space-evenly; */
     }
     #data-clear-input {
         top: 48%;
-        right: 21%;
+        right: 32%;
     }
     #search-bar {
         padding: 10px 20px;
@@ -548,13 +558,16 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
         padding:0%;
         font-size: 5vw;
     }
+    #current-country {
+        font-size: 2.2vw;
+    }
     #main-temp {
         font-size: 15.2vw;
         color: #48484A;
     }
 
     #temp-list {
-        width: 35%;
+        width: 38%;
         margin: 0px auto;
         padding-left: 0%;
         /* border: 1px solid red; */
@@ -626,12 +639,19 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
         color: #48484A;
         font-style: italic;
     }
-        .switch-wrapper .moon,
-        .switch-wrapper .sun {
-            width: 2.4vw;
-            height: 4vh;
-        }
-        
+    .switch-wrapper .moon,
+    .switch-wrapper .sun {
+        width: 2.4vw;
+        height: 4vh;
+    }
+    .detail {
+        font-size: 4vw;
+    }
+    .sunrise-set-time,
+    #max-temp,
+    #min-temp {
+        font-size: 4vw;
+    }
 }
 @media only screen and (max-width: 768px) {
     .switch-wrapper .moon,
