--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,13 @@
 body{
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     font-family: 'Roboto', sans-serif;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(207, 214, 231) 90%);
     background-repeat: no-repeat;
 }
 .container{
-    height: 90%;
+    height: 100%;
+    height: 100vh;
     background: white;
     border-radius: 20px;
     box-shadow: 1px 1px 32px 12px rgba(179, 179, 179, 0.1);
@@ -14,13 +16,15 @@ body{
 /* **************** */
 /* leftside box */
 #weather-box-left{
-    height: 100%;
+    max-height: 50%;
     display: flex;
     flex-direction: column;
     padding-left: 2%;
+    overflow: hidden;
 }
 /* search bar */
 #search-form{
+    height: 100%;
     cursor: pointer;
     position: relative;
 }
@@ -52,6 +56,7 @@ body{
 }
 /* city info */
 #current-location{
+    height: 100%;
     padding-top: 10%;
 }
 #current-city{
@@ -118,6 +123,7 @@ body{
     opacity: 0.1;
 }
 .weather-detail-img {
+    height: 100%;
     margin-top: 14%;
     position: relative;
     margin-right: 10px;
@@ -144,6 +150,7 @@ body{
     border-radius: 10px;
 }
 #weather-box-left-detail{
+    height: 100%;
     margin-left: 10%;
     padding: 10px 0px 0px 8%;
     font-size: 0.8vw;
@@ -719,7 +726,7 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
     }
     #data-clear-input {
         top:30px;
-        right: 70px;
+        right: 74px;
     }
     #current-city{
         font-size: 10vw;
@@ -727,9 +734,9 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
     #current-country {
         font-size: 4vw;
     }
-        .temp {
-            top: 12%;
-        }
+    .temp {
+        top: 12%;
+    }
     #weather-box-right {
         height: 100%;
         width: 100%;
