--- a/src/style.css
+++ b/src/style.css
@@ -16,11 +16,10 @@ body{
 /* **************** */
 /* leftside box */
 #weather-box-left{
-    max-height: 50%;
+    height: auto;
     display: flex;
     flex-direction: column;
     padding-left: 2%;
-    overflow: hidden;
 }
 /* search bar */
 #search-form{
@@ -56,7 +55,6 @@ body{
 }
 /* city info */
 #current-location{
-    height: 100%;
     padding-top: 10%;
 }
 #current-city{
@@ -123,10 +121,10 @@ body{
     opacity: 0.1;
 }
 .weather-detail-img {
-    height: 100%;
     margin-top: 14%;
     position: relative;
     margin-right: 10px;
+    margin-bottom: 15%;
 }
 #insertCityName{
     position: absolute;
@@ -150,7 +148,6 @@ body{
     border-radius: 10px;
 }
 #weather-box-left-detail{
-    height: 100%;
     margin-left: 10%;
     padding: 10px 0px 0px 8%;
     font-size: 0.8vw;
@@ -726,7 +723,7 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
     }
     #data-clear-input {
         top:30px;
-        right: 74px;
+        right: 70px;
     }
     #current-city{
         font-size: 10vw;
