--- a/src/style.css
+++ b/src/style.css
@@ -16,10 +16,11 @@ body{
 /* **************** */
 /* leftside box */
 #weather-box-left{
-    height: auto;
+    max-height: 50%;
     display: flex;
     flex-direction: column;
     padding-left: 2%;
+    overflow: hidden;
 }
 /* search bar */
 #search-form{
@@ -55,6 +56,7 @@ body{
 }
 /* city info */
 #current-location{
+    height: 100%;
     padding-top: 10%;
 }
 #current-city{
@@ -121,10 +123,10 @@ body{
     opacity: 0.1;
 }
 .weather-detail-img {
+    height: 100%;
     margin-top: 14%;
     position: relative;
     margin-right: 10px;
-    margin-bottom: 15%;
 }
 #insertCityName{
     position: absolute;
@@ -148,6 +150,7 @@ body{
     border-radius: 10px;
 }
 #weather-box-left-detail{
+    height: 100%;
     margin-left: 10%;
     padding: 10px 0px 0px 8%;
     font-size: 0.8vw;
@@ -723,7 +726,7 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
     }
     #data-clear-input {
         top:30px;
-        right: 70px;
+        right: 74px;
     }
     #current-city{
         font-size: 10vw;
