--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,10 @@
 body{
-    height: 100%;
-    width: 100%;
+    width: 100vw;
     font-family: 'Roboto', sans-serif;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(207, 214, 231) 90%);
     background-repeat: no-repeat;
 }
 .container{
-    height: 100%;
-    height: 100vh;
     background: white;
     border-radius: 20px;
     box-shadow: 1px 1px 32px 12px rgba(179, 179, 179, 0.1);
@@ -16,15 +13,12 @@ body{
 /* **************** */
 /* leftside box */
 #weather-box-left{
-    max-height: 50%;
     display: flex;
     flex-direction: column;
     padding-left: 2%;
-    overflow: hidden;
 }
 /* search bar */
 #search-form{
-    height: 100%;
     cursor: pointer;
     position: relative;
 }
@@ -56,7 +50,6 @@ body{
 }
 /* city info */
 #current-location{
-    height: 100%;
     padding-top: 10%;
 }
 #current-city{
@@ -123,7 +116,6 @@ body{
     opacity: 0.1;
 }
 .weather-detail-img {
-    height: 100%;
     margin-top: 14%;
     position: relative;
     margin-right: 10px;
@@ -150,7 +142,6 @@ body{
     border-radius: 10px;
 }
 #weather-box-left-detail{
-    height: 100%;
     margin-left: 10%;
     padding: 10px 0px 0px 8%;
     font-size: 0.8vw;
@@ -726,7 +717,7 @@ body.night .container #weather-box-right .weather-detail-list .forecast-day {
     }
     #data-clear-input {
         top:30px;
-        right: 74px;
+        right: 70px;
     }
     #current-city{
         font-size: 10vw;
